<resources>
    <string name="app_name">Flickster</string>
    <string name="sampleTitle">Spider-Man: Homecoming</string>
    <string name="sampleDescription">Following the events of Captain America: Civil War, Peter Parker, with the help of his mentor Tony Stark, tries to balance his life as an ordinary high school student in Queens, New York City, with fighting crime as his superhero alter ego Spider-Man as a new threat, the Vulture, emerges.</string>
    <string name="budget">Budget</string>
    <string name="genres">Genres</string>
    <string name="releaseDate">Release Date</string>
    <string name="revenue">Revenue</string>
    <string name="runtime">Runtime</string>
</resources>
